# sympy-reading

./: .gitignore  .gitignore.in  .octocov.yml  README.md  pyproject.toml  setup.cfg
.github/: renovate.json5
.github/workflows/: gitignore-in.yml  octocov.yml  pypi-publish.yml  python-test.yml
sympy_reading/: __init__.py
tests/: test_basis.py
