[tool.poetry]
# I use poetry as just a package manager.
# So, I only write the settings that poetry needs.
# The actual package metadata is written in setup.cfg.
# I use pypa/build for packaging.
name = "sympy-reading"
version = "0.0.0"
description = ""
authors = []
packages = [{ include = "sympy_reading" }]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
poethepoet = "*"
setuptools-scm = "*"
build = "*"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sympy_reading/_version.py"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=sympy_reading --doctest-modules --cov-report=xml"
format = "ruff format sympy_reading tests"
check = "ruff check sympy_reading tests"
build = [{ cmd = "python -m build" }]

[tool.ruff]
line-length = 79
