[project]
name = "sympy-reading"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "sympy>=1.12",
]
description = "Sympy equation to human-readable string"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/sympy-reading"

[tool.setuptools]
package-data = { "sympy_reading" = ["py.typed", "*.pyi"], "*" = ["README.md", "LICENSE"] }
package-dir = { "sympy_reading" = "sympy_reading" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "setuptools-scm",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sympy_reading/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=sympy_reading --doctest-modules --cov-report=xml"
format = "ruff format sympy_reading tests"
check = [
    { cmd = "ruff check sympy_reading tests" },
    # { cmd = "mypy sympy_reading tests" },
]
build = "python -m build"

[tool.ruff]
line-length = 79
