[project]
name = "sympy-reading"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
]
description = "Sympy equation to human-readable string"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/sympy-reading"

[tool.setuptools]
package-data = { "sympy_reading" = ["py.typed", "*.pyi"], "*" = ["README.md", "LICENSE"] }
package-dir = { "sympy_reading" = "sympy_reading" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "setuptools-scm",
    "ruff",
    "mypy",
]

[tool.uv]
# Source of truth:
# https://github.com/kitsuyui/kitsuyui/wiki/Official-Information-for-Dependency-Update-Policies
# PyPI policy in this repo uses a 2 day quarantine window.
exclude-newer = "2 days"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sympy_reading/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=sympy_reading --doctest-modules --cov-report=xml"
format = "ruff format sympy_reading tests"
check = [
    { cmd = "ruff check sympy_reading tests" },
    { cmd = "mypy sympy_reading tests" },
]
build = "python -m build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "E",
    "F",
    "I",
    "PERF",
    "PLE",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"sympy_reading/_version.py" = [
    "RUF022",
]
"sympy_reading/__init__.py" = [
    "C901",
]
"tests/**/*.py" = [
    "ANN",
    "D",
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 1

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true
