[metadata]
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
name = sympy-reading
description = Sympy equation to human-readable string
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/kitsuyui/sympy-reading
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[options]
packages = sympy_reading
test_suite = tests
python_requires = >= 3.8

[options.package_data]
* = README.md, LICENSE
sympy_reading = py.typed, *.pyi
